// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegacyPaidPaymentScreen should render with back button, title, help button, paid banner and notice code but no creditor tax id 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          Object {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": Object {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              Object {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  PN_CANCELLED_MESSAGE_PAID_PAYMENT
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          activityState={2}
          collapsable={false}
          forwardedRef={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "display": "flex",
                  "overflow": undefined,
                },
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                handlerTag={2}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexGrow": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "backgroundColor": "#FFFFFF",
                              "paddingHorizontal": 24,
                              "paddingTop": 0,
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "height": 56,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignSelf": "center",
                                  "flex": 1,
                                }
                              }
                            >
                              <View
                                accessibilityLabel="Back"
                                accessibilityRole="button"
                                accessibilityState={
                                  Object {
                                    "disabled": false,
                                  }
                                }
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                hitSlop={8}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                testID="back-button"
                              >
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "height": 24,
                                        "width": 24,
                                      },
                                      Object {
                                        "alignItems": "center",
                                      },
                                      Object {
                                        "justifyContent": "center",
                                      },
                                      Object {
                                        "transform": Array [
                                          Object {
                                            "scale": undefined,
                                          },
                                        ],
                                      },
                                    ]
                                  }
                                >
                                  <RNSVGSvgView
                                    accessibilityElementsHidden={true}
                                    accessibilityLabel=""
                                    accessible={false}
                                    align="xMidYMid"
                                    animatedProps={
                                      Object {
                                        "color": undefined,
                                      }
                                    }
                                    bbHeight={24}
                                    bbWidth={24}
                                    focusable={false}
                                    height={24}
                                    importantForAccessibility="no-hide-descendants"
                                    meetOrSlice={0}
                                    minX={0}
                                    minY={0}
                                    style={
                                      Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "borderWidth": 0,
                                        },
                                        Object {
                                          "color": "#0E0F13",
                                        },
                                        Object {
                                          "flex": 0,
                                          "height": 24,
                                          "width": 24,
                                        },
                                      ]
                                    }
                                    tintColor="#0E0F13"
                                    vbHeight={24}
                                    vbWidth={24}
                                    width={24}
                                  >
                                    <RNSVGGroup
                                      fill={
                                        Object {
                                          "payload": 4278190080,
                                          "type": 0,
                                        }
                                      }
                                    >
                                      <RNSVGPath
                                        clipRule={0}
                                        d="M12.7071.2929c-.3905-.39053-1.0237-.39053-1.4142 0l-11 11c-.39053.3905-.39053 1.0237 0 1.4142l11 11c.3905.3905 1.0237.3905 1.4142 0 .3905-.3905.3905-1.0237 0-1.4142L2.41421 12 12.7071 1.70711c.3905-.39053.3905-1.0237 0-1.41422Z"
                                        fill={
                                          Object {
                                            "type": 2,
                                          }
                                        }
                                        fillRule={0}
                                        propList={
                                          Array [
                                            "fill",
                                            "fillRule",
                                          ]
                                        }
                                      />
                                    </RNSVGGroup>
                                  </RNSVGSvgView>
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                }
                              }
                            >
                              <View
                                accessible={true}
                              >
                                <Text
                                  accessibilityRole="header"
                                  accessible={true}
                                  color="bluegrey"
                                  defaultColor="bluegrey"
                                  defaultWeight="Regular"
                                  font="TitilliumWeb"
                                  fontStyle={
                                    Object {
                                      "fontSize": 16,
                                      "lineHeight": 24,
                                    }
                                  }
                                  numberOfLines={1}
                                  style={
                                    Array [
                                      Object {
                                        "fontSize": 16,
                                        "lineHeight": 24,
                                      },
                                      Object {
                                        "color": "#475A6D",
                                        "fontFamily": "Titillium Web",
                                        "fontStyle": "normal",
                                        "fontWeight": "400",
                                      },
                                    ]
                                  }
                                  testID="bodyLabel"
                                  weight="Regular"
                                >
                                  Payment informations
                                </Text>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "flex": 1,
                                  "flexDirection": "row",
                                  "justifyContent": "flex-end",
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "width": 16,
                                  }
                                }
                              />
                            </View>
                          </View>
                        </View>
                        <RCTSafeAreaView
                          style={
                            Object {
                              "flex": 1,
                            }
                          }
                        >
                          <View
                            accessibilityRole="alert"
                            accessible={true}
                            style={
                              Array [
                                Object {
                                  "alignContent": "center",
                                  "alignItems": "flex-start",
                                  "flexDirection": "row",
                                  "paddingBottom": 8,
                                  "paddingLeft": 24,
                                  "paddingRight": 24,
                                  "paddingTop": 8,
                                  "width": "100%",
                                },
                                Object {
                                  "backgroundColor": "#00C5CA",
                                },
                              ]
                            }
                            testID="SectionStatusContent"
                          >
                            <View
                              style={
                                Object {
                                  "alignSelf": "center",
                                }
                              }
                            >
                              <RNSVGSvgView
                                accessibilityElementsHidden={true}
                                accessibilityLabel=""
                                accessible={false}
                                align="xMidYMid"
                                bbHeight={24}
                                bbWidth={24}
                                focusable={false}
                                height={24}
                                importantForAccessibility="no-hide-descendants"
                                meetOrSlice={0}
                                minX={0}
                                minY={0}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "transparent",
                                      "borderWidth": 0,
                                    },
                                    Object {
                                      "color": "#17324D",
                                    },
                                    Object {
                                      "flex": 0,
                                      "height": 24,
                                      "width": 24,
                                    },
                                  ]
                                }
                                tintColor="#17324D"
                                vbHeight={24}
                                vbWidth={24}
                                width={24}
                              >
                                <RNSVGGroup
                                  fill={
                                    Object {
                                      "payload": 4278190080,
                                      "type": 0,
                                    }
                                  }
                                >
                                  <RNSVGPath
                                    d="M17.752 8.22a1.083 1.083 0 0 0-1.531.028l-5.974 6.192-2.468-2.558-.093-.086a1.083 1.083 0 0 0-1.465 1.589l3.248 3.367.095.087c.43.352 1.068.322 1.463-.087l6.752-7 .083-.096c.328-.431.29-1.05-.11-1.435Z"
                                    fill={
                                      Object {
                                        "type": 2,
                                      }
                                    }
                                    propList={
                                      Array [
                                        "fill",
                                      ]
                                    }
                                  />
                                  <RNSVGPath
                                    clipRule={0}
                                    d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm0 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2Z"
                                    fill={
                                      Object {
                                        "type": 2,
                                      }
                                    }
                                    fillRule={0}
                                    propList={
                                      Array [
                                        "fill",
                                        "fillRule",
                                      ]
                                    }
                                  />
                                  <RNSVGPath
                                    d="M17.752 8.22a1.083 1.083 0 0 0-1.531.028l-5.974 6.192-2.468-2.558-.093-.086a1.083 1.083 0 0 0-1.465 1.589l3.248 3.367.095.087c.43.352 1.068.322 1.463-.087l6.752-7 .083-.096c.328-.431.29-1.05-.11-1.435Z"
                                    fill={
                                      Object {
                                        "type": 2,
                                      }
                                    }
                                    propList={
                                      Array [
                                        "fill",
                                      ]
                                    }
                                  />
                                  <RNSVGPath
                                    clipRule={0}
                                    d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm0 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2Z"
                                    fill={
                                      Object {
                                        "type": 2,
                                      }
                                    }
                                    fillRule={0}
                                    propList={
                                      Array [
                                        "fill",
                                        "fillRule",
                                      ]
                                    }
                                  />
                                </RNSVGGroup>
                              </RNSVGSvgView>
                            </View>
                            <Text
                              color="bluegreyDark"
                              defaultColor="blue"
                              defaultWeight="Bold"
                              font="TitilliumWeb"
                              fontStyle={
                                Object {
                                  "fontSize": 16,
                                }
                              }
                              style={
                                Array [
                                  Array [
                                    Object {
                                      "flex": 1,
                                      "marginLeft": 16,
                                    },
                                    Object {
                                      "paddingVertical": 14,
                                    },
                                  ],
                                  Object {
                                    "fontSize": 16,
                                  },
                                  Object {
                                    "color": "#17324D",
                                    "fontFamily": "Titillium Web",
                                    "fontStyle": "normal",
                                    "fontWeight": "400",
                                  },
                                ]
                              }
                              weight="Regular"
                            >
                              <Text
                                color="bluegreyDark"
                                defaultColor="blue"
                                defaultWeight="Bold"
                                font="TitilliumWeb"
                                fontStyle={
                                  Object {
                                    "fontSize": 14,
                                    "lineHeight": 21,
                                  }
                                }
                                style={
                                  Array [
                                    Object {
                                      "fontSize": 14,
                                      "lineHeight": 21,
                                    },
                                    Object {
                                      "color": "#17324D",
                                      "fontFamily": "Titillium Web",
                                      "fontStyle": "normal",
                                      "fontWeight": "400",
                                    },
                                  ]
                                }
                                weight="Regular"
                              >
                                This notice has been already paid!
                              </Text>
                            </Text>
                          </View>
                          <RCTScrollView
                            style={
                              Object {
                                "paddingHorizontal": 24,
                              }
                            }
                          >
                            <View>
                              <View
                                accessibilityLabel="Notice code"
                                accessibilityRole="button"
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                              >
                                <View
                                  importantForAccessibility="no-hide-descendants"
                                  style={
                                    Array [
                                      Object {
                                        "marginHorizontal": -24,
                                        "paddingHorizontal": 24,
                                        "paddingVertical": 12,
                                      },
                                      Object {
                                        "backgroundColor": undefined,
                                      },
                                    ]
                                  }
                                >
                                  <View
                                    style={
                                      Array [
                                        Object {
                                          "alignItems": "center",
                                          "flexDirection": "row",
                                          "justifyContent": "space-between",
                                        },
                                        Object {
                                          "transform": Array [
                                            Object {
                                              "scale": undefined,
                                            },
                                          ],
                                        },
                                      ]
                                    }
                                  >
                                    <View
                                      style={
                                        Object {
                                          "flex": 1,
                                        }
                                      }
                                    >
                                      <Text
                                        allowFontScaling={false}
                                        color="grey-700"
                                        defaultColor="blue"
                                        defaultWeight="Bold"
                                        font="TitilliumWeb"
                                        fontStyle={
                                          Object {
                                            "fontSize": 14,
                                            "lineHeight": 21,
                                          }
                                        }
                                        style={
                                          Array [
                                            Object {
                                              "fontSize": 14,
                                              "lineHeight": 21,
                                            },
                                            Object {
                                              "color": "#555C70",
                                              "fontFamily": "Titillium Web",
                                              "fontStyle": "normal",
                                              "fontWeight": "400",
                                            },
                                          ]
                                        }
                                        weight="Regular"
                                      >
                                        Notice code
                                      </Text>
                                      <Text
                                        allowFontScaling={false}
                                        color="blue"
                                        defaultColor="black"
                                        defaultWeight="SemiBold"
                                        font="TitilliumWeb"
                                        fontStyle={
                                          Object {
                                            "fontSize": 18,
                                            "lineHeight": 25,
                                          }
                                        }
                                        numberOfLines={2}
                                        style={
                                          Array [
                                            Object {
                                              "fontSize": 18,
                                              "lineHeight": 25,
                                            },
                                            Object {
                                              "color": "#0073E6",
                                              "fontFamily": "Titillium Web",
                                              "fontStyle": "normal",
                                              "fontWeight": "600",
                                            },
                                          ]
                                        }
                                        weight="SemiBold"
                                      >
                                        0180  1198  8086  4794  97
                                      </Text>
                                    </View>
                                    <View
                                      style={
                                        Object {
                                          "marginLeft": 16,
                                        }
                                      }
                                    >
                                      <RNSVGSvgView
                                        accessibilityElementsHidden={true}
                                        accessibilityLabel=""
                                        accessible={false}
                                        align="xMidYMid"
                                        bbHeight={24}
                                        bbWidth={24}
                                        focusable={false}
                                        height={24}
                                        importantForAccessibility="no-hide-descendants"
                                        meetOrSlice={0}
                                        minX={0}
                                        minY={0}
                                        style={
                                          Array [
                                            Object {
                                              "backgroundColor": "transparent",
                                              "borderWidth": 0,
                                            },
                                            Object {
                                              "color": "#0073E6",
                                            },
                                            Object {
                                              "flex": 0,
                                              "height": 24,
                                              "width": 24,
                                            },
                                          ]
                                        }
                                        tintColor="#0073E6"
                                        vbHeight={24}
                                        vbWidth={24}
                                        width={24}
                                      >
                                        <RNSVGGroup
                                          fill={
                                            Object {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                        >
                                          <RNSVGPath
                                            clipRule={0}
                                            d="M12 18h8a2 2 0 0 0 2-2V9h-4a3 3 0 0 1-3-3V2h-3a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2Zm9.332-11.987a2 2 0 0 1 .603.987H18a1 1 0 0 1-1-1V2.227a2 2 0 0 1 .406.281l3.926 3.505ZM14 20h-2a4 4 0 0 1-4-4V6H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2Zm2 0h4a4 4 0 0 0 4-4V7.505a4 4 0 0 0-1.336-2.984l-3.926-3.505A4 4 0 0 0 16.074 0H12a4 4 0 0 0-4 4H4a4 4 0 0 0-4 4v12a4 4 0 0 0 4 4h8a4 4 0 0 0 4-4Z"
                                            fill={
                                              Object {
                                                "type": 2,
                                              }
                                            }
                                            fillRule={0}
                                            propList={
                                              Array [
                                                "fill",
                                                "fillRule",
                                              ]
                                            }
                                          />
                                        </RNSVGGroup>
                                      </RNSVGSvgView>
                                    </View>
                                  </View>
                                </View>
                              </View>
                            </View>
                          </RCTScrollView>
                        </RCTSafeAreaView>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`LegacyPaidPaymentScreen should render with back button, title, help button, paid banner, notice code and creditor tax id 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          Object {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              Object {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": Object {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              Object {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                Object {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    Object {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  PN_CANCELLED_MESSAGE_PAID_PAYMENT
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  Object {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          activityState={2}
          collapsable={false}
          forwardedRef={[Function]}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              Array [
                Object {
                  "display": "flex",
                  "overflow": undefined,
                },
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              Object {
                "close": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": Object {
                  "animation": "spring",
                  "config": Object {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                handlerTag={1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  Object {
                    "flex": 1,
                    "transform": Array [
                      Object {
                        "translateX": 0,
                      },
                      Object {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    Array [
                      Object {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexGrow": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "backgroundColor": "#FFFFFF",
                              "paddingHorizontal": 24,
                              "paddingTop": 0,
                            }
                          }
                        >
                          <View
                            style={
                              Object {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "height": 56,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignSelf": "center",
                                  "flex": 1,
                                }
                              }
                            >
                              <View
                                accessibilityLabel="Back"
                                accessibilityRole="button"
                                accessibilityState={
                                  Object {
                                    "disabled": false,
                                  }
                                }
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                hitSlop={8}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                testID="back-button"
                              >
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "height": 24,
                                        "width": 24,
                                      },
                                      Object {
                                        "alignItems": "center",
                                      },
                                      Object {
                                        "justifyContent": "center",
                                      },
                                      Object {
                                        "transform": Array [
                                          Object {
                                            "scale": undefined,
                                          },
                                        ],
                                      },
                                    ]
                                  }
                                >
                                  <RNSVGSvgView
                                    accessibilityElementsHidden={true}
                                    accessibilityLabel=""
                                    accessible={false}
                                    align="xMidYMid"
                                    animatedProps={
                                      Object {
                                        "color": undefined,
                                      }
                                    }
                                    bbHeight={24}
                                    bbWidth={24}
                                    focusable={false}
                                    height={24}
                                    importantForAccessibility="no-hide-descendants"
                                    meetOrSlice={0}
                                    minX={0}
                                    minY={0}
                                    style={
                                      Array [
                                        Object {
                                          "backgroundColor": "transparent",
                                          "borderWidth": 0,
                                        },
                                        Object {
                                          "color": "#0E0F13",
                                        },
                                        Object {
                                          "flex": 0,
                                          "height": 24,
                                          "width": 24,
                                        },
                                      ]
                                    }
                                    tintColor="#0E0F13"
                                    vbHeight={24}
                                    vbWidth={24}
                                    width={24}
                                  >
                                    <RNSVGGroup
                                      fill={
                                        Object {
                                          "payload": 4278190080,
                                          "type": 0,
                                        }
                                      }
                                    >
                                      <RNSVGPath
                                        clipRule={0}
                                        d="M12.7071.2929c-.3905-.39053-1.0237-.39053-1.4142 0l-11 11c-.39053.3905-.39053 1.0237 0 1.4142l11 11c.3905.3905 1.0237.3905 1.4142 0 .3905-.3905.3905-1.0237 0-1.4142L2.41421 12 12.7071 1.70711c.3905-.39053.3905-1.0237 0-1.41422Z"
                                        fill={
                                          Object {
                                            "type": 2,
                                          }
                                        }
                                        fillRule={0}
                                        propList={
                                          Array [
                                            "fill",
                                            "fillRule",
                                          ]
                                        }
                                      />
                                    </RNSVGGroup>
                                  </RNSVGSvgView>
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                }
                              }
                            >
                              <View
                                accessible={true}
                              >
                                <Text
                                  accessibilityRole="header"
                                  accessible={true}
                                  color="bluegrey"
                                  defaultColor="bluegrey"
                                  defaultWeight="Regular"
                                  font="TitilliumWeb"
                                  fontStyle={
                                    Object {
                                      "fontSize": 16,
                                      "lineHeight": 24,
                                    }
                                  }
                                  numberOfLines={1}
                                  style={
                                    Array [
                                      Object {
                                        "fontSize": 16,
                                        "lineHeight": 24,
                                      },
                                      Object {
                                        "color": "#475A6D",
                                        "fontFamily": "Titillium Web",
                                        "fontStyle": "normal",
                                        "fontWeight": "400",
                                      },
                                    ]
                                  }
                                  testID="bodyLabel"
                                  weight="Regular"
                                >
                                  Payment informations
                                </Text>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "flex": 1,
                                  "flexDirection": "row",
                                  "justifyContent": "flex-end",
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "width": 16,
                                  }
                                }
                              />
                            </View>
                          </View>
                        </View>
                        <RCTSafeAreaView
                          style={
                            Object {
                              "flex": 1,
                            }
                          }
                        >
                          <View
                            accessibilityRole="alert"
                            accessible={true}
                            style={
                              Array [
                                Object {
                                  "alignContent": "center",
                                  "alignItems": "flex-start",
                                  "flexDirection": "row",
                                  "paddingBottom": 8,
                                  "paddingLeft": 24,
                                  "paddingRight": 24,
                                  "paddingTop": 8,
                                  "width": "100%",
                                },
                                Object {
                                  "backgroundColor": "#00C5CA",
                                },
                              ]
                            }
                            testID="SectionStatusContent"
                          >
                            <View
                              style={
                                Object {
                                  "alignSelf": "center",
                                }
                              }
                            >
                              <RNSVGSvgView
                                accessibilityElementsHidden={true}
                                accessibilityLabel=""
                                accessible={false}
                                align="xMidYMid"
                                bbHeight={24}
                                bbWidth={24}
                                focusable={false}
                                height={24}
                                importantForAccessibility="no-hide-descendants"
                                meetOrSlice={0}
                                minX={0}
                                minY={0}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "transparent",
                                      "borderWidth": 0,
                                    },
                                    Object {
                                      "color": "#17324D",
                                    },
                                    Object {
                                      "flex": 0,
                                      "height": 24,
                                      "width": 24,
                                    },
                                  ]
                                }
                                tintColor="#17324D"
                                vbHeight={24}
                                vbWidth={24}
                                width={24}
                              >
                                <RNSVGGroup
                                  fill={
                                    Object {
                                      "payload": 4278190080,
                                      "type": 0,
                                    }
                                  }
                                >
                                  <RNSVGPath
                                    d="M17.752 8.22a1.083 1.083 0 0 0-1.531.028l-5.974 6.192-2.468-2.558-.093-.086a1.083 1.083 0 0 0-1.465 1.589l3.248 3.367.095.087c.43.352 1.068.322 1.463-.087l6.752-7 .083-.096c.328-.431.29-1.05-.11-1.435Z"
                                    fill={
                                      Object {
                                        "type": 2,
                                      }
                                    }
                                    propList={
                                      Array [
                                        "fill",
                                      ]
                                    }
                                  />
                                  <RNSVGPath
                                    clipRule={0}
                                    d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm0 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2Z"
                                    fill={
                                      Object {
                                        "type": 2,
                                      }
                                    }
                                    fillRule={0}
                                    propList={
                                      Array [
                                        "fill",
                                        "fillRule",
                                      ]
                                    }
                                  />
                                  <RNSVGPath
                                    d="M17.752 8.22a1.083 1.083 0 0 0-1.531.028l-5.974 6.192-2.468-2.558-.093-.086a1.083 1.083 0 0 0-1.465 1.589l3.248 3.367.095.087c.43.352 1.068.322 1.463-.087l6.752-7 .083-.096c.328-.431.29-1.05-.11-1.435Z"
                                    fill={
                                      Object {
                                        "type": 2,
                                      }
                                    }
                                    propList={
                                      Array [
                                        "fill",
                                      ]
                                    }
                                  />
                                  <RNSVGPath
                                    clipRule={0}
                                    d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm0 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2Z"
                                    fill={
                                      Object {
                                        "type": 2,
                                      }
                                    }
                                    fillRule={0}
                                    propList={
                                      Array [
                                        "fill",
                                        "fillRule",
                                      ]
                                    }
                                  />
                                </RNSVGGroup>
                              </RNSVGSvgView>
                            </View>
                            <Text
                              color="bluegreyDark"
                              defaultColor="blue"
                              defaultWeight="Bold"
                              font="TitilliumWeb"
                              fontStyle={
                                Object {
                                  "fontSize": 16,
                                }
                              }
                              style={
                                Array [
                                  Array [
                                    Object {
                                      "flex": 1,
                                      "marginLeft": 16,
                                    },
                                    Object {
                                      "paddingVertical": 14,
                                    },
                                  ],
                                  Object {
                                    "fontSize": 16,
                                  },
                                  Object {
                                    "color": "#17324D",
                                    "fontFamily": "Titillium Web",
                                    "fontStyle": "normal",
                                    "fontWeight": "400",
                                  },
                                ]
                              }
                              weight="Regular"
                            >
                              <Text
                                color="bluegreyDark"
                                defaultColor="blue"
                                defaultWeight="Bold"
                                font="TitilliumWeb"
                                fontStyle={
                                  Object {
                                    "fontSize": 14,
                                    "lineHeight": 21,
                                  }
                                }
                                style={
                                  Array [
                                    Object {
                                      "fontSize": 14,
                                      "lineHeight": 21,
                                    },
                                    Object {
                                      "color": "#17324D",
                                      "fontFamily": "Titillium Web",
                                      "fontStyle": "normal",
                                      "fontWeight": "400",
                                    },
                                  ]
                                }
                                weight="Regular"
                              >
                                This notice has been already paid!
                              </Text>
                            </Text>
                          </View>
                          <RCTScrollView
                            style={
                              Object {
                                "paddingHorizontal": 24,
                              }
                            }
                          >
                            <View>
                              <View
                                accessibilityLabel="Notice code"
                                accessibilityRole="button"
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                              >
                                <View
                                  importantForAccessibility="no-hide-descendants"
                                  style={
                                    Array [
                                      Object {
                                        "marginHorizontal": -24,
                                        "paddingHorizontal": 24,
                                        "paddingVertical": 12,
                                      },
                                      Object {
                                        "backgroundColor": undefined,
                                      },
                                    ]
                                  }
                                >
                                  <View
                                    style={
                                      Array [
                                        Object {
                                          "alignItems": "center",
                                          "flexDirection": "row",
                                          "justifyContent": "space-between",
                                        },
                                        Object {
                                          "transform": Array [
                                            Object {
                                              "scale": undefined,
                                            },
                                          ],
                                        },
                                      ]
                                    }
                                  >
                                    <View
                                      style={
                                        Object {
                                          "flex": 1,
                                        }
                                      }
                                    >
                                      <Text
                                        allowFontScaling={false}
                                        color="grey-700"
                                        defaultColor="blue"
                                        defaultWeight="Bold"
                                        font="TitilliumWeb"
                                        fontStyle={
                                          Object {
                                            "fontSize": 14,
                                            "lineHeight": 21,
                                          }
                                        }
                                        style={
                                          Array [
                                            Object {
                                              "fontSize": 14,
                                              "lineHeight": 21,
                                            },
                                            Object {
                                              "color": "#555C70",
                                              "fontFamily": "Titillium Web",
                                              "fontStyle": "normal",
                                              "fontWeight": "400",
                                            },
                                          ]
                                        }
                                        weight="Regular"
                                      >
                                        Notice code
                                      </Text>
                                      <Text
                                        allowFontScaling={false}
                                        color="blue"
                                        defaultColor="black"
                                        defaultWeight="SemiBold"
                                        font="TitilliumWeb"
                                        fontStyle={
                                          Object {
                                            "fontSize": 18,
                                            "lineHeight": 25,
                                          }
                                        }
                                        numberOfLines={2}
                                        style={
                                          Array [
                                            Object {
                                              "fontSize": 18,
                                              "lineHeight": 25,
                                            },
                                            Object {
                                              "color": "#0073E6",
                                              "fontFamily": "Titillium Web",
                                              "fontStyle": "normal",
                                              "fontWeight": "600",
                                            },
                                          ]
                                        }
                                        weight="SemiBold"
                                      >
                                        0180  1198  8086  4794  97
                                      </Text>
                                    </View>
                                    <View
                                      style={
                                        Object {
                                          "marginLeft": 16,
                                        }
                                      }
                                    >
                                      <RNSVGSvgView
                                        accessibilityElementsHidden={true}
                                        accessibilityLabel=""
                                        accessible={false}
                                        align="xMidYMid"
                                        bbHeight={24}
                                        bbWidth={24}
                                        focusable={false}
                                        height={24}
                                        importantForAccessibility="no-hide-descendants"
                                        meetOrSlice={0}
                                        minX={0}
                                        minY={0}
                                        style={
                                          Array [
                                            Object {
                                              "backgroundColor": "transparent",
                                              "borderWidth": 0,
                                            },
                                            Object {
                                              "color": "#0073E6",
                                            },
                                            Object {
                                              "flex": 0,
                                              "height": 24,
                                              "width": 24,
                                            },
                                          ]
                                        }
                                        tintColor="#0073E6"
                                        vbHeight={24}
                                        vbWidth={24}
                                        width={24}
                                      >
                                        <RNSVGGroup
                                          fill={
                                            Object {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                        >
                                          <RNSVGPath
                                            clipRule={0}
                                            d="M12 18h8a2 2 0 0 0 2-2V9h-4a3 3 0 0 1-3-3V2h-3a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2Zm9.332-11.987a2 2 0 0 1 .603.987H18a1 1 0 0 1-1-1V2.227a2 2 0 0 1 .406.281l3.926 3.505ZM14 20h-2a4 4 0 0 1-4-4V6H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2Zm2 0h4a4 4 0 0 0 4-4V7.505a4 4 0 0 0-1.336-2.984l-3.926-3.505A4 4 0 0 0 16.074 0H12a4 4 0 0 0-4 4H4a4 4 0 0 0-4 4v12a4 4 0 0 0 4 4h8a4 4 0 0 0 4-4Z"
                                            fill={
                                              Object {
                                                "type": 2,
                                              }
                                            }
                                            fillRule={0}
                                            propList={
                                              Array [
                                                "fill",
                                                "fillRule",
                                              ]
                                            }
                                          />
                                        </RNSVGGroup>
                                      </RNSVGSvgView>
                                    </View>
                                  </View>
                                </View>
                              </View>
                              <View
                                accessibilityLabel="Payee Fiscal Code"
                                accessibilityRole="button"
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                              >
                                <View
                                  importantForAccessibility="no-hide-descendants"
                                  style={
                                    Array [
                                      Object {
                                        "marginHorizontal": -24,
                                        "paddingHorizontal": 24,
                                        "paddingVertical": 12,
                                      },
                                      Object {
                                        "backgroundColor": undefined,
                                      },
                                    ]
                                  }
                                >
                                  <View
                                    style={
                                      Array [
                                        Object {
                                          "alignItems": "center",
                                          "flexDirection": "row",
                                          "justifyContent": "space-between",
                                        },
                                        Object {
                                          "transform": Array [
                                            Object {
                                              "scale": undefined,
                                            },
                                          ],
                                        },
                                      ]
                                    }
                                  >
                                    <View
                                      style={
                                        Object {
                                          "flex": 1,
                                        }
                                      }
                                    >
                                      <Text
                                        allowFontScaling={false}
                                        color="grey-700"
                                        defaultColor="blue"
                                        defaultWeight="Bold"
                                        font="TitilliumWeb"
                                        fontStyle={
                                          Object {
                                            "fontSize": 14,
                                            "lineHeight": 21,
                                          }
                                        }
                                        style={
                                          Array [
                                            Object {
                                              "fontSize": 14,
                                              "lineHeight": 21,
                                            },
                                            Object {
                                              "color": "#555C70",
                                              "fontFamily": "Titillium Web",
                                              "fontStyle": "normal",
                                              "fontWeight": "400",
                                            },
                                          ]
                                        }
                                        weight="Regular"
                                      >
                                        Payee Fiscal Code
                                      </Text>
                                      <Text
                                        allowFontScaling={false}
                                        color="blue"
                                        defaultColor="black"
                                        defaultWeight="SemiBold"
                                        font="TitilliumWeb"
                                        fontStyle={
                                          Object {
                                            "fontSize": 18,
                                            "lineHeight": 25,
                                          }
                                        }
                                        numberOfLines={2}
                                        style={
                                          Array [
                                            Object {
                                              "fontSize": 18,
                                              "lineHeight": 25,
                                            },
                                            Object {
                                              "color": "#0073E6",
                                              "fontFamily": "Titillium Web",
                                              "fontStyle": "normal",
                                              "fontWeight": "600",
                                            },
                                          ]
                                        }
                                        weight="SemiBold"
                                      >
                                        00000000009
                                      </Text>
                                    </View>
                                    <View
                                      style={
                                        Object {
                                          "marginLeft": 16,
                                        }
                                      }
                                    >
                                      <RNSVGSvgView
                                        accessibilityElementsHidden={true}
                                        accessibilityLabel=""
                                        accessible={false}
                                        align="xMidYMid"
                                        bbHeight={24}
                                        bbWidth={24}
                                        focusable={false}
                                        height={24}
                                        importantForAccessibility="no-hide-descendants"
                                        meetOrSlice={0}
                                        minX={0}
                                        minY={0}
                                        style={
                                          Array [
                                            Object {
                                              "backgroundColor": "transparent",
                                              "borderWidth": 0,
                                            },
                                            Object {
                                              "color": "#0073E6",
                                            },
                                            Object {
                                              "flex": 0,
                                              "height": 24,
                                              "width": 24,
                                            },
                                          ]
                                        }
                                        tintColor="#0073E6"
                                        vbHeight={24}
                                        vbWidth={24}
                                        width={24}
                                      >
                                        <RNSVGGroup
                                          fill={
                                            Object {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                        >
                                          <RNSVGPath
                                            clipRule={0}
                                            d="M12 18h8a2 2 0 0 0 2-2V9h-4a3 3 0 0 1-3-3V2h-3a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2Zm9.332-11.987a2 2 0 0 1 .603.987H18a1 1 0 0 1-1-1V2.227a2 2 0 0 1 .406.281l3.926 3.505ZM14 20h-2a4 4 0 0 1-4-4V6H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2Zm2 0h4a4 4 0 0 0 4-4V7.505a4 4 0 0 0-1.336-2.984l-3.926-3.505A4 4 0 0 0 16.074 0H12a4 4 0 0 0-4 4H4a4 4 0 0 0-4 4v12a4 4 0 0 0 4 4h8a4 4 0 0 0 4-4Z"
                                            fill={
                                              Object {
                                                "type": 2,
                                              }
                                            }
                                            fillRule={0}
                                            propList={
                                              Array [
                                                "fill",
                                                "fillRule",
                                              ]
                                            }
                                          />
                                        </RNSVGGroup>
                                      </RNSVGSvgView>
                                    </View>
                                  </View>
                                </View>
                              </View>
                            </View>
                          </RCTScrollView>
                        </RCTSafeAreaView>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
